--- a/src/main/resources/templates/mainp/mainp.html
+++ b/src/main/resources/templates/mainp/mainp.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
 <body>
-	<a href="/templates/mainp/mainp.html">메인 페이지</a>
+	<h1>메인 페이지</h1>
 </body>
 </html>
