--- a/src/main/resources/static/css/reservation/reservationSearch.css
+++ b/src/main/resources/static/css/reservation/reservationSearch.css
@@ -14,12 +14,44 @@ div{
 	box-sizing: border-box;
 }
 
-div#title {
+div.title {
 	float: left;
 	width:20%;
 }
 
-div#progressbar{
+div.progressbar{
 	float:right;
 	width:80%;
+}
+
+ul.travel-slider {
+	list-style: none;
+}
+
+div.travel-slider {
+	display: flex;
+	justify-content: center;
+}
+
+div.slider-box{
+	width: 600px;
+	height: 100px;
+	border: 1px	solid #000;
+}
+
+/*--
+	DeleteMe:
+		delete below styles when finished this page
+--*/
+
+div.title{
+	background-color: #ffc720;
+}
+
+div.progressbar{
+	background-color: #0dcaf0;
+}
+
+div.travel-slider{
+	background-color: #198754;
 }
