--- a/src/main/resources/static/css/reservation/reservationSearch.css
+++ b/src/main/resources/static/css/reservation/reservationSearch.css
@@ -1,11 +1,11 @@
 @charset "UTF-8";
-* {
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
     margin: 0;
     padding: 0;
     border: 0;
 }
 
-body{
+body {
     min-width: 1200px;
     background: rgb(255, 255, 255);
     color: rgb(49, 49, 49);
@@ -13,10 +13,6 @@ body{
     font-weight: normal;
     font-family: Arial, Meiryo, "Hiragino Kaku Gothic Pro", "Microsoft Yahei", STXihei, "Microsoft MingLiU", Mingliu, SimHei, "Nanum Gothic", "Yu Gothic", sans-serif;
     word-break: break-word;
-}
-
-div {
-    display: block;
 }
 
 h3 {
@@ -33,24 +29,9 @@ ul, ol, li {
     list-style: none;
 }
 
-ul {
-    display: block;
-    list-style-type: disc;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 40px;
-}
-
-li {
-    display: list-item;
-    text-align: -webkit-match-parent;
-}
-
 a {
     color: rgb(49, 49, 49);
-    text-decoration: none;
+    text-decoration: none !important;
     cursor: pointer;
 }
 
@@ -60,6 +41,24 @@ dl {
     margin-block-end: 1em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
+}
+
+img, input, textarea, select, button {
+    vertical-align: middle;
+    margin: 0px;
+    padding: 0px;
+    color: rgb(49, 49, 49);
+    font-size: 14px;
+    line-height: 1.5;
+    font-family: Arial, Meiryo, "Hiragino Kaku Gothic Pro", "Microsoft Yahei", STXihei, "Microsoft MingLiU", Mingliu, SimHei, "Nanum Gothic", "Yu Gothic", sans-serif;
+}
+
+
+button {
+    border: 0px;
+    vertical-align: middle;
+    background-color: rgb(255, 255, 255);
+    cursor: pointer;
 }
 
 .content {
@@ -73,6 +72,7 @@ dl {
 .tit_booking_wrap {
     margin-top: 60px;
 }
+
 .tit_booking_wrap .pg_tit {
     float: left;
     display: inline-block;
@@ -80,6 +80,7 @@ dl {
     color: #1a1a1a;
     text-align: left;
 }
+
 .tit_booking_wrap .step_booking {
     float: right;
 }
@@ -139,6 +140,7 @@ dl {
     clear: both;
     content: "";
 }
+
 /* EOL: HEADER PROGRESSBAR*/
 
 /* SOL: SELECTION BOX SLIDER */
@@ -161,14 +163,15 @@ dl {
     box-sizing: border-box;
 }
 
-.service_section_wrap--simple .service_section_slide {
-    height: 92px;
-}
-
 .service_section_wrap .service_section_slide {
     height: 120px;
     box-sizing: border-box;
 }
+
+.service_section_wrap--simple .service_section_slide {
+    height: 92px;
+}
+
 
 .swiper-container {
     margin: 0px auto;
@@ -178,17 +181,28 @@ dl {
     padding: 0px;
     z-index: 1;
 }
-.service_section_wrap .service_section_slide div#route_1 {
+
+.swiper-wrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    display: flex;
+    box-sizing: content-box;
+    justify-content: center;
+}
+
+.service_section_wrap .service_section_slide li {
     padding: 25px 0px;
     box-sizing: border-box;
 }
 
 .swiper-slide {
+    flex:1;
     flex-shrink: 0;
     width: 100%;
     height: 100%;
     position: relative;
-    transition-property: transform, -webkit-transform;
 }
 
 .service_section_box {
@@ -269,12 +283,6 @@ dl {
     vertical-align: middle;
 }
 
-button {
-    border: 0px;
-    vertical-align: middle;
-    background-color: rgb(255, 255, 255);
-    cursor: pointer;
-}
 
 .btn_small.refresh {
     padding: 0px 7px 0px 40px;
@@ -328,6 +336,7 @@ button {
     display: inline-block;
     left: 45%;
 }
+
 .service_section_wrap .swiper-pagination {
     bottom: 10px;
 }
@@ -366,8 +375,141 @@ button {
     opacity: 1;
     background: rgb(0, 122, 255);
 }
+
 /* EOL: SELECTION BOX SLIDER */
 
 /* SOL: DATE SELECTION SLIDE */
+#layer_availability_list .sel_date_wrap {
+    border: 1px solid rgb(204, 204, 204);
+    margin-top: -3px;
+    z-index: 20;
+}
 
+.sel_date_wrap {
+    position: relative;
+    width: 100%;
+    background-color: rgb(245, 245, 245);
+    border-top: 1px solid rgb(204, 204, 204);
+    border-radius: 0px 0px 5px 5px;
+    box-sizing: border-box;
+}
+
+.sel_date_wrap .sel_date_slide {
+    margin: 0px auto;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+}
+
+.sel_date_wrap .sel_date_slide li {
+    float: left;
+    width: 160px;
+    height: 103px;
+    box-sizing: border-box;
+}
+
+.sel_date_wrap .sel_date_slide .sel_date_box {
+    display: block;
+    padding: 25px 0px;
+    margin-left: -1px;
+    height: 103px;
+    text-align: center;
+    border-right: 1px solid rgb(224, 224, 224);
+    border-left: 1px solid rgb(224, 224, 224);
+    box-sizing: border-box;
+}
+
+.sel_date_wrap .sel_date_slide .sel_date_box .date {
+    display: block;
+    margin-bottom: 10px;
+    font-size: 16px;
+    color: rgb(77, 77, 77);
+}
+
+.sel_date_wrap .sel_date_slide .sel_date_box .price {
+    display: block;
+    font-size: 20px;
+    color: rgb(26, 26, 26);
+}
+
+.sel_date_wrap .sel_date_slide li.on .sel_date_box {
+    position: relative;
+    padding-top: 22px;
+    background-color: rgb(255, 255, 255);
+    border: 2px solid rgb(210, 44, 38);
+    box-shadow: rgb(221, 221, 221) 1px 1px 10px;
+    z-index: 1;
+}
+
+.sel_date_wrap .sel_date_slide li.on .sel_date_box .date {
+    font-size: 20px;
+    font-weight: 700;
+    color: rgb(26, 26, 26);
+}
+
+.sel_date_wrap .sel_date_slide::after {
+    display: block;
+    content: "";
+    clear: both;
+}
+
+.sel_date_wrap .btn_slide_prev {
+    display: inline-block;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 45px;
+    height: 102px;
+    background: url("//contents-image.twayair.com/homepage/images/booking/btn_sec_prev.png") 50% 50% no-repeat rgb(245, 245, 245);
+    border-right: 1px solid rgb(204, 204, 204);
+    border-radius: 5px 0px 0px 5px;
+    text-indent: -9999px;
+    z-index: 18;
+    box-sizing: border-box;
+}
+
+.sel_date_wrap .btn_slide_next {
+    display: inline-block;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    width: 45px;
+    height: 102px;
+    background: url("//contents-image.twayair.com/homepage/images/booking/btn_sec_next.png") 50% 50% no-repeat rgb(245, 245, 245);
+    border-left: 1px solid rgb(204, 204, 204);
+    border-radius: 0px 5px 5px 0px;
+    text-indent: -9999px;
+    z-index: 18;
+    box-sizing: border-box;
+}
 /* EOL: DATE SELECTION SLIDE */
+
+/* SOL: SORTING ORDER SELECTOR */
+.section_list_wrap {
+    margin-top: 40px;
+}
+.section_list_wrap .list_opt {
+    overflow: hidden;
+}
+.select.small {
+    min-width: 84px;
+}
+.select {
+    display: inline-block;
+    position: relative;
+    min-width: 100px;
+}
+
+select {
+    padding: 0px 30px 0px 15px;
+    width: 100%;
+    height: 30px;
+    font-size: 16px;
+    color: rgb(26, 26, 26);
+    border: 1px solid rgb(204, 204, 204);
+    background-color: rgb(255, 255, 255);
+    box-sizing: border-box;
+    appearance: none;
+}
+
+/* EOL: SORTING ORDER SELECTOR */
