--- a/src/main/resources/templates/reservation/passenger_list.html
+++ b/src/main/resources/templates/reservation/passenger_list.html
@@ -21,7 +21,35 @@
 					<div class="p_info-list">
 						<ul>
 							<li>
-								<a></a>
+								<a> <span> 성인 1 : 박소현</span>
+								</a>
+								<div class="p_info_wrap">
+									<div class="info-top">
+										<div class="me-check">
+											<label>
+												<input type="checkbox">
+												회원 본인 탑승 제외
+											</label>
+										</div>
+										<div class="info-text">* 은 필수 입력 항목입니다.</div>
+									</div>
+									<div class="info_detail">
+										<ul>
+											<li>
+												<div class="detail_li">
+													<div class="type">성별</div>
+													<div class="input_wrap">d</div>
+												</div>
+											</li>
+											<li>
+												<div class="detail_li">
+													<div class="type">국적</div>
+													<div class="input_wrap">d</div>
+												</div>
+											</li>
+										</ul>
+									</div>
+								</div>
 							</li>
 						</ul>
 					</div>
