--- a/src/main/resources/static/css/reservation/reservationSearch.css
+++ b/src/main/resources/static/css/reservation/reservationSearch.css
@@ -13,6 +13,7 @@ body {
     font-weight: normal;
     font-family: Arial, Meiryo, "Hiragino Kaku Gothic Pro", "Microsoft Yahei", STXihei, "Microsoft MingLiU", Mingliu, SimHei, "Nanum Gothic", "Yu Gothic", sans-serif;
     word-break: break-word;
+    line-height: normal;
 }
 
 h3 {
@@ -31,7 +32,7 @@ ul, ol, li {
 
 a {
     color: rgb(49, 49, 49);
-    text-decoration: none !important;
+    text-decoration: none;
     cursor: pointer;
 }
 
@@ -153,14 +154,14 @@ button {
     box-sizing: border-box;
 }
 
-.service_section_wrap--simple {
-    padding-bottom: 10px;
-}
-
 .service_section_wrap {
     position: relative;
     text-align: center;
     box-sizing: border-box;
+}
+
+.service_section_wrap--simple {
+    padding-bottom: 10px;
 }
 
 .service_section_wrap .service_section_slide {
@@ -198,7 +199,7 @@ button {
 }
 
 .swiper-slide {
-    flex:1;
+    flex: 1;
     flex-shrink: 0;
     width: 100%;
     height: 100%;
@@ -482,18 +483,22 @@ button {
     z-index: 18;
     box-sizing: border-box;
 }
+
 /* EOL: DATE SELECTION SLIDE */
 
 /* SOL: SORTING ORDER SELECTOR */
 .section_list_wrap {
     margin-top: 40px;
 }
+
 .section_list_wrap .list_opt {
     overflow: hidden;
 }
+
 .select.small {
     min-width: 84px;
 }
+
 .select {
     display: inline-block;
     position: relative;
@@ -513,3 +518,406 @@ select {
 }
 
 /* EOL: SORTING ORDER SELECTOR */
+
+/* SOL: AIR FLIGHT LIST */
+.section {
+    padding: 50px 0px;
+    width: 100%;
+}
+
+.non_service_wrap {
+    border-bottom: 1px solid rgb(204, 204, 204);
+    text-align: center;
+    border-radius: 4px;
+}
+
+.mb70 {
+    margin-bottom: 70px !important;
+}
+
+.mt10 {
+    margin-top: 10px !important;
+}
+
+.non_service_wrap .con_box {
+    padding: 37px 0px 40px;
+}
+
+.non_service_wrap .con_box .note {
+    display: inline-block;
+    padding-bottom: 70px;
+    padding-top: 235px;
+    line-height: 36px;
+    font-size: 24px;
+    color: rgb(77, 77, 77);
+    background: url("//contents-image.twayair.com/homepage/images/ico/ico_no_booking.png") center 70px no-repeat;
+}
+
+.section_list_wrap .section_list .section_list_item.on {
+    border: 2px solid rgb(26, 26, 26);
+    border-radius: 7px;
+    box-shadow: rgba(0, 0, 0, 0.6) 0px 5px 10px;
+    margin-bottom: 15px;
+}
+
+.section_list_wrap .section_list .section_list_item {
+    position: relative;
+    margin-top: 10px;
+    border: 1px solid rgb(204, 204, 204);
+    border-radius: 7px;
+}
+
+.section_list_wrap .section_list .section_list_item.on {
+    border: 2px solid rgb(26, 26, 26);
+    border-radius: 7px;
+    box-shadow: rgba(0, 0, 0, 0.6) 0px 5px 10px;
+    margin-bottom: 15px;
+}
+
+.section_list_wrap .section_list .section_list_box {
+    display: inline-block;
+    position: relative;
+    width: 100%;
+    vertical-align: middle;
+    box-sizing: border-box;
+    cursor: pointer;
+}
+
+.section_list_wrap .section_list .section_list_box.on {
+    border-bottom: 1px solid rgb(204, 204, 204);
+}
+
+.section_list_wrap .section_list .section_list_box.on {
+    border-bottom: 1px solid rgb(204, 204, 204);
+}
+
+.section_list .section_list_box .section_info {
+    display: flex;
+}
+
+.section_list .section_list_box .service_section_box {
+    flex: 1 1 0%;
+    padding: 30px 30px 30px 20px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.section_list .section_list_box .service_section_box div {
+    vertical-align: top;
+}
+
+.section_list .section_list_box .service_section_box .plan_type {
+    display: inline-block;
+    vertical-align: top;
+}
+
+.section_list .section_list_box .service_section_box .bul_air_info.jb {
+    color: rgb(26, 26, 26);
+    font-size: 14px;
+    /*background: url("/temp.png") 0px 0px no-repeat;*/
+}
+
+.service_section_box .bul_air_info {
+    display: inline-block;
+    line-height: 20px;
+}
+
+.section_list .section_list_box .service_section_box .bul_air_info {
+    display: block;
+    font-size: 12px;
+    text-decoration: underline;
+    padding-left: 25px;
+    color: rgb(77, 77, 77);
+}
+
+.section_list .section_list_box .service_section_box .tit {
+    font-size: 35px;
+}
+
+.section_list .section_list_box .service_section_box .service_exp {
+    width: 155px;
+    background: url("//contents-image.twayair.com/homepage/images/booking/bg_service_exp.png") 100% 35% no-repeat;
+}
+
+.service_section_box .service_exp .top {
+    margin-top: 10px;
+}
+
+.service_section_box .service_exp p {
+    font-size: 14px;
+    color: rgb(77, 77, 77);
+}
+
+.service_section_box .service_exp .bttm {
+    margin-top: 17px;
+}
+
+.section_list .section_list_box .service_section_box .service_exp .top {
+    margin-top: 5px;
+}
+
+.section_list .section_list_box .service_section_box + .price_info {
+    border-left: 1px dashed rgb(204, 204, 204);
+}
+
+.section_list .section_list_box .price_info {
+    width: 250px;
+    padding-top: 20px;
+    text-align: center;
+    position: relative;
+    border-left: 1px solid rgb(204, 204, 204);
+    font-size: 14px;
+    color: rgb(26, 26, 26);
+}
+
+.section_list .section_list_box .price_info .normal {
+    color: rgb(115, 155, 71);
+}
+
+.section_list .section_list_box .price_info .class {
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.section_list .section_list_box .price_info .price {
+    font-size: 30px;
+    line-height: 50px;
+}
+
+.section_list .section_list_box .price_info .empty_seats {
+    font-size: 16px;
+    color: rgb(210, 44, 38);
+}
+
+.section_list .section_list_box .price_info .business {
+    color: rgb(210, 44, 38);
+}
+
+.section_list .detail_info {
+    padding: 15px 20px;
+    box-sizing: border-box;
+    font-size: 0px;
+    display: flex;
+    justify-content: stretch;
+}
+
+.section_list .detail_info .rate_box_index {
+    width: 225px;
+    border: 1px solid rgb(204, 204, 204);
+}
+
+.section_list .detail_info .rate_box_index .select_rate {
+    padding: 17px 20px;
+    min-height: 56px;
+    background-color: rgb(245, 245, 245);
+    box-sizing: border-box;
+    text-align: center;
+}
+
+.section_list .detail_info .rate_box_index .rate_list {
+    padding: 25px 20px;
+    box-sizing: border-box;
+    height: 100%;
+}
+
+.section_list .detail_info .rate_box_index .rate_list .service_index {
+    padding-left: 35px;
+    font-size: 15px;
+    color: rgb(77, 77, 77);
+    line-height: 24px;
+}
+
+.section_list .detail_info .rate_box_index .rate_list .service_index + .service_index {
+    margin-top: 10px;
+}
+
+.section_list .detail_info .icon_seat {
+    background: url("//contents-image.twayair.com/homepage/images/ico/ico_seat.png") 0px 50% no-repeat;
+}
+
+.section_list .detail_info .icon_carryon {
+    background: url("//contents-image.twayair.com/homepage/images/ico/ico_carryon.png") 5px 50% no-repeat;
+}
+
+.section_list .detail_info .icon_free_bag {
+    background: url("//contents-image.twayair.com/homepage/images/ico/ico_free_bag.png") 0px 50% no-repeat;
+}
+
+.section_list .detail_info .icon_food {
+    background: url("//contents-image.twayair.com/homepage/images/ico/ico_food.png") 0px 50% no-repeat;
+}
+
+.section_list .detail_info .icon_business {
+    background: url("//contents-image.twayair.com/homepage/images/ico/ico_business.png") 0px 50% no-repeat;
+}
+
+.section_list .detail_info .rate_box {
+    display: flex;
+    flex: 1 1 0%;
+    flex-flow: column;
+    place-content: flex-start space-between;
+    border-top: 1px solid rgb(204, 204, 204);
+    border-bottom: 1px solid rgb(204, 204, 204);
+    border-right: 1px solid rgb(204, 204, 204);
+}
+
+.section_list .detail_info .rate_box.normal .select_rate {
+    background-color: rgb(205, 228, 169);
+    border-top: 2px solid rgb(130, 171, 66);
+}
+
+.section_list .detail_info .rate_box .select_rate {
+    padding: 17px 20px 17px 0px;
+    min-height: 56px;
+    box-sizing: border-box;
+    text-align: center;
+    position: relative;
+}
+
+.section_list .detail_info .rate_box .select_rate label {
+    max-width: calc(100% - 62px);
+    height: auto;
+    line-height: 1;
+    margin-right: 0px;
+    font-size: 18px;
+    font-weight: 700;
+    color: rgb(26, 26, 26);
+    letter-spacing: -0.5px;
+    position: relative;
+    padding-left: 32px;
+}
+
+.section_list .detail_info input[type="radio"]:disabled + .rate_box .select_rate .icon {
+    background: url("//contents-image.twayair.com/homepage/images/ico/ico_radio.png") 0px -44px no-repeat;
+}
+
+.section_list .detail_info .rate_box .select_rate .btn_tooltip.alert {
+    top: 17px;
+    position: absolute;
+    margin-left: 5px;
+}
+
+.btn_tooltip.alert {
+    width: 22px;
+    height: 22px;
+    background: url("//contents-image.twayair.com/homepage/images/ico/ico_tooltip_alert.png") 0px 0px no-repeat;
+}
+
+.btn_tooltip {
+    position: relative;
+    display: inline-block;
+    width: 19px;
+    height: 19px;
+    vertical-align: middle;
+    background: url("//contents-image.twayair.com/homepage/images/ico/ico_tooltip.png") 0px 0px no-repeat;
+}
+
+.section_list .detail_info .rate_box .rate_list {
+    padding: 25px;
+    box-sizing: border-box;
+    height: 100%;
+}
+
+.section_list .detail_info .rate_box .rate_list .service {
+    padding-left: 35px;
+    font-size: 16px;
+    color: rgb(77, 77, 77);
+    line-height: 24px;
+}
+
+.hidden {
+    overflow: hidden;
+    display: inline-block;
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    clip: rect(1px, 1px, 1px, 1px);
+    clip-path: inset(50%);
+    border: 0px;
+    z-index: -1;
+}
+
+.section_list .detail_info .rate_box .rate_list .service + .service {
+    margin-top: 10px;
+}
+
+.section_list .detail_info .rate_box .rate_price {
+    position: relative;
+    padding: 15px 0px;
+    min-height: 57px;
+    border-top: 1px dotted rgb(224, 224, 224);
+    box-sizing: border-box;
+    text-align: center;
+    margin: 0px 2px;
+}
+
+.section_list .detail_info .rate_box .rate_price .soldout {
+    font-size: 24px;
+    color: rgb(210, 44, 38);
+}
+
+.section_list .detail_info input[type="radio"]:checked + .rate_box.normal {
+    box-shadow: rgb(130, 171, 66) 0px 0px 0px 2px inset;
+}
+
+.section_list .detail_info input[type="radio"]:checked + .rate_box.normal .select_rate {
+    background-color: rgb(130, 171, 66);
+}
+
+.section_list .detail_info input[type="radio"]:checked + .rate_box.normal .select_rate label {
+    color: rgb(255, 255, 255);
+}
+
+.section_list .detail_info input[type="radio"]:checked + .rate_box.normal .select_rate .icon {
+    background: url("//contents-image.twayair.com/homepage/images/ico/ico_radio.png") 0px -22px no-repeat;
+}
+
+.section_list .detail_info .rate_box .select_rate .icon {
+    width: 22px;
+    height: 22px;
+    display: inline-block;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    background: url("//contents-image.twayair.com/homepage/images/ico/ico_radio.png") 0px 0px no-repeat;
+}
+
+.section_list .detail_info .rate_box .rate_price .unit {
+    font-size: 14px;
+    color: rgb(128, 128, 128);
+}
+
+.section_list .detail_info .rate_box .rate_price .price {
+    margin: 0px 5px;
+    font-size: 24px;
+    font-weight: 700;
+    color: rgb(26, 26, 26);
+}
+
+.section_list .detail_info .rate_box .rate_price .empty_seats {
+    font-size: 16px;
+    font-weight: 700;
+    color: rgb(210, 44, 38);
+}
+
+.section_list .detail_info .rate_box.business .select_rate {
+    background-color: rgb(253, 144, 140);
+    border-top: 2px solid rgb(210, 44, 38);
+}
+
+.section_list_wrap .section_list .section_list_item {
+    position: relative;
+    margin-top: 10px;
+    border: 1px solid rgb(204, 204, 204);
+    border-radius: 7px;
+}
+
+.section_list .detail_info .icon_seat_bsn {
+    background: url("//contents-image.twayair.com/homepage/images/ico/ico_seat_bsn.png") 0px 50% no-repeat;
+}
+
+.section_list .detail_info .icon_carries {
+    background: url("//contents-image.twayair.com/homepage/images/ico/ico_carries.png") 0px 50% no-repeat;
+}
+
+/* EOL: AIR FLIGHT LIST */
