--- a/src/main/resources/static/css/reservation/reservationSearch.css
+++ b/src/main/resources/static/css/reservation/reservationSearch.css
@@ -495,6 +495,10 @@ button {
     overflow: hidden;
 }
 
+.form-select:focus{
+    box-shadow:none;
+}
+
 .select.small {
     min-width: 84px;
 }
@@ -699,6 +703,7 @@ select {
     font-size: 0px;
     display: flex;
     justify-content: stretch;
+    flex-direction: row;
 }
 
 .section_list .detail_info .rate_box_index {
@@ -775,29 +780,26 @@ select {
 }
 
 .section_list .detail_info .rate_box .select_rate label {
-    max-width: calc(100% - 62px);
+    max-width: 100%;
     height: auto;
-    line-height: 1;
-    margin-right: 0px;
+    line-height: 1.2;
+    margin-right: 0;
     font-size: 18px;
     font-weight: 700;
     color: rgb(26, 26, 26);
     letter-spacing: -0.5px;
     position: relative;
-    padding-left: 32px;
 }
 
-.section_list .detail_info input[type="radio"]:disabled + .rate_box .select_rate .icon {
-    background: url("//contents-image.twayair.com/homepage/images/ico/ico_radio.png") 0px -44px no-repeat;
-}
-
-.section_list .detail_info .rate_box .select_rate .btn_tooltip.alert {
-    top: 17px;
+.section_list .detail_info .rate_box .select_rate .btn_tooltip.alertIcon {
+    top: 15px;
     position: absolute;
     margin-left: 5px;
 }
 
-.btn_tooltip.alert {
+.btn_tooltip.alertIcon {
+    margin: 0;
+    padding: 0;
     width: 22px;
     height: 22px;
     background: url("//contents-image.twayair.com/homepage/images/ico/ico_tooltip_alert.png") 0px 0px no-repeat;
