--- a/src/main/resources/static/css/reservation/passenger_list.css
+++ b/src/main/resources/static/css/reservation/passenger_list.css
@@ -12,7 +12,11 @@ ul, ol, li {
 .container {
 	width: 1100px;
 	margin: 0 auto;
-	background-color: #f4f4f4;
+	/* background-color: #f4f4f4; */
+}
+
+#footer{
+	margin-top: 100px;
 }
 
 .head {
@@ -74,23 +78,122 @@ ul, ol, li {
 	color: #d22c26;
 	line-height: 21px;
 }
-
-.info_detail .datail_li {
-	display: flex;
-	height: 75px;
-	border-bottom: 1px solid #e7e7e7;
+/* ------- table ------- */
+input {
+	vertical-align: middle;
 }
 
-.info_detail .datail_li .type {
+input[type="text"], input[type="number"], input[type="email"], input[type="date"], input[type="search"], input[type="tel"], input[type="time"], input[type="password"] {
+	padding: 0px 20px;
+	height: 46px;
+	font-size: 16px;
+	color: rgb(26, 26, 26);
+	border: 1px solid rgb(204, 204, 204);
+	background-color: rgb(255, 255, 255);
+	box-sizing: border-box;
+	margin-left: -6px;
+	margin-right: 10px;
+	width: 240px;
+	/* line-height: 46px; */
+}
+
+select {
+	padding: 0px 30px 0px 15px;
+	width: 150px;
+	height: 46px;
+	font-size: 16px;
+	color: rgb(26, 26, 26);
+	border: 1px solid rgb(204, 204, 204);
+	background-color: rgb(255, 255, 255);
+	box-sizing: border-box;
+	-webkit-appearance: none; /* 크롬 화살표 없애기 */
+	-moz-appearance: none; /* 파이어폭스 화살표 없애기 */
+	appearance: none; /* 화살표 없애기 */
+	margin-right: 10px;
+	margin-left: -6px;
+	width: 154.5px;
+	vertical-align: middle;
+}
+
+select::-ms-expand {
+	display: none; /* IE 10, 11 네이티브 화살표 없애기*/
+}
+
+.info_detail .detail_li {
+	height: 75px;
+}
+
+.info_detail table {
+	border-collapse: collapse;
+}
+
+.info_detail table tr {
+	border-bottom: 1px solid rgb(224, 224, 224);
+}
+
+.info_detail .detail_li .type {
 	padding: 20px 30px;
 	font-size: 16px;
 	font-weight: normal;
 	color: #4d4d4d;
-	width: 95px;
+	width: 140px;
 }
 
-.p_info_wrap .info_detail .datail_li .input_wrap {
+.detail_li .type .info-text {
+	font-weight: 600;
+	font-size: large;
+}
+
+.info_detail .detail_li .input_wrap {
 	padding: 14px 20px;
 	font-size: 16px;
 	color: #1a1a1a;
+	width: 880px;
+}
+
+.detail_li .input_wrap button.btn {
+	padding: 12px 20px;
+	min-width: 80px;
+	min-height: 46px;
+	font-size: 16px;
+	color: rgb(26, 26, 26);
+	text-align: center;
+	line-height: 1.1;
+	background-color: rgb(255, 255, 255);
+	border: 1px solid rgb(128, 128, 128);
+	border-radius: 3px;
+	box-sizing: border-box;
+}
+
+.detail_li .input_wrap select.w170 {
+	width: 170px;
+}
+
+.detail_li .input_wrap select.w150 {
+	width: 150px;
+}
+
+.detail_li .input_wrap input.w490 {
+	width: 490px;
+}
+
+.detail_li .input_wrap select.country_code {
+	width: 240px;
+}
+.next_btn_area{
+	text-align: center;
+	margin-top: 60px;
+}
+.next_btn_area .nextBtn {
+	padding: 15px 40px;
+	min-width: 150px;
+	min-height: 50px;
+	font-size: 18px;
+	text-align: center;
+	line-height: 1.1;
+	background-color: rgb(125, 117, 109);
+	color: white;
+	border: 1px solid rgb(176, 176, 176);
+	border-radius: 3px;
+	box-sizing: border-box;
 }
