--- a/src/main/resources/templates/footerNav.html
+++ b/src/main/resources/templates/footerNav.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
-<link rel="stylesheet" href="css/footerNav.css">
+<link rel="stylesheet" type="text/css" th:href="@{/css/footerNav.css}">
 </head>
 <body>
 	<div class="f_info">
