--- a/src/main/resources/templates/headerNav.html
+++ b/src/main/resources/templates/headerNav.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
-<link rel="stylesheet" href="css/headerNav.css">
+<link rel="stylesheet" type="text/css" th:href="@{/css/headerNav.css}">
 </head>
 <body>
 	<nav>
